@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.9.0+build.204
 
 # Mod Properties
-	mod_version = 1.0.5
+	mod_version = 1.0.6
 	maven_group = net.fabricmc
 	archives_base_name = Age-Of-Exile-1.16.1
 
