@@ -36,9 +36,20 @@ public class SpellPredicates {
             return false;
         }
     };
+    private static Predicate<LivingEntity> ANY = x -> {
+        try {
+            GearItemData data = Gear.Load(x.getMainHandStack());
+            return data != null && data.GetBaseGearType()
+                .isWeapon();
+        } catch (Exception e) {
+            return false;
+        }
+    };
 
     public static SpellPredicate REQUIRE_SHOOTABLE = new SpellPredicate(SHOOTABLE_PRED, new SText(Formatting.GREEN + "Requires Ranged Weapon to use."));
     public static SpellPredicate REQUIRE_MAGE_WEAPON = new SpellPredicate(MAGE_PRED, new SText(Formatting.GREEN + "Requires Mage Weapon to use."));
     public static SpellPredicate REQUIRE_MELEE = new SpellPredicate(MELEE_PRED, new SText(Formatting.GOLD + "Requires Melee weapon to use."));
+    public static SpellPredicate ANY_WEAPON = new SpellPredicate(ANY, new SText(Formatting.GOLD + "Any weapon can use."));
+
 }
 
