@@ -47,7 +47,7 @@ public class BraveryEffect extends BasePotionEffect implements IApplyStatPotion,
     public List<PotionStat> getPotionStats() {
         List<PotionStat> list = new ArrayList<>();
         list.add(new PotionStat(20, Armor.getInstance()));
-        list.add(new PotionStat(5, HealthRegen.getInstance()));
+        list.add(new PotionStat(4, HealthRegen.getInstance()));
         return list;
     }
 
