@@ -1,7 +1,7 @@
 {
   "schemaVersion": 1,
   "id": "mmorpg",
-  "version": "1.0.5",
+  "version": "1.0.6",
 
   "name": "Age of Exile",
   "description": "Diablo in Minecraft!",
